unpackaged/main/default/objects/fferpcore__ProcessRun__c/fferpcore__ProcessRun__c.object-meta.xml
<CustomObject>
    <label>Process Run</label>
    <nameField>
        <displayFormat>PR-{000000}</displayFormat>
        <label>Process Run Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Process Runs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>