unpackaged/main/default/objects/fferpcore__ProcessRun__c/fields/fferpcore__AsyncApexJobId__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__AsyncApexJobId__c</fullName>
    <description>ID of the asynchronous job controlling this process run.</description>
    <label>Async Apex Job ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>