unpackaged/main/default/objects/fferpcore__ProcessRun__c/fields/fferpcore__Description__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Description__c</fullName>
    <description>Process Description</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>