unpackaged/main/default/objects/fferpcore__ProcessRun__c/fields/fferpcore__FinishTime__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__FinishTime__c</fullName>
    <label>Finish Time</label>
    <type>DateTime</type>
</CustomField>