unpackaged/main/default/objects/fferpcore__ProcessRun__c/fields/fferpcore__IsParent__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__IsParent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the Process Run is a parent and has child processes.</description>
    <label>Is Parent</label>
    <type>Checkbox</type>
</CustomField>