unpackaged/main/default/objects/fferpcore__ProcessRun__c/fields/fferpcore__ParentProcessRun__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__ParentProcessRun__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>In the case of grouped process chaining, this displays the parent of all the process runs.</description>
    <label>Parent Process Run</label>
    <referenceTo>fferpcore__ProcessRun__c</referenceTo>
    <relationshipLabel>Child Process Runs</relationshipLabel>
    <relationshipName>Process_Runs</relationshipName>
    <type>Lookup</type>
</CustomField>