unpackaged/main/default/objects/fferpcore__ProcessRun__c/fields/fferpcore__StartedBy__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__StartedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User that started the process.</description>
    <label>Started By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Process_Runs</relationshipName>
    <type>Lookup</type>
</CustomField>