unpackaged/main/default/objects/fferpcore__ProcessRun__c/fields/fferpcore__StartTime__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__StartTime__c</fullName>
    <label>Start Time</label>
    <type>DateTime</type>
</CustomField>