unpackaged/main/default/objects/fferpcore__ProcessRun__c/fields/fferpcore__TotalNumberOfErrors__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__TotalNumberOfErrors__c</fullName>
    <description>Total Number of Logs which are in Error status.</description>
    <label>Total Number of Errors</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>