unpackaged/main/default/objects/fferpcore__ProcessRun__c/fields/fferpcore__UsingDetailedMonitoring__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__UsingDetailedMonitoring__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that Detailed Monitoring has been selected for the Process Run.</description>
    <label>Using Detailed Monitoring</label>
    <type>Checkbox</type>
</CustomField>