unpackaged/main/default/objects/fferpcore__ProcessRun__c/listViews/fferpcore__All.listView-meta.xml
<ListView>
    <fullName>fferpcore__All</fullName>
    <columns>NAME</columns>
    <columns>fferpcore__ParentProcessRun__c</columns>
    <columns>fferpcore__Description__c</columns>
    <columns>fferpcore__StartTime__c</columns>
    <columns>fferpcore__FinishTime__c</columns>
    <columns>fferpcore__StartedBy__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>