unpackaged/main/default/objects/fferpcore__ProcessRun__c/listViews/fferpcore__ParentProcessRuns.listView-meta.xml
<ListView>
    <fullName>fferpcore__ParentProcessRuns</fullName>
    <columns>NAME</columns>
    <columns>fferpcore__ParentProcessRun__c</columns>
    <columns>fferpcore__Description__c</columns>
    <columns>fferpcore__StartTime__c</columns>
    <columns>fferpcore__FinishTime__c</columns>
    <columns>fferpcore__StartedBy__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>fferpcore__IsParent__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Parent Process Runs</label>
    <language>en_US</language>
</ListView>